# fedimint-sdk-ffi

./: .gitignore  README.md
.github/workflows/: rust-ci.yaml
fedimint-client-uniffi/: Cargo.toml  Makefile  build.rs  uniffi.kotlin-multiplatform.toml  uniffi.toml
fedimint-client-uniffi/langs/android/: settings.gradle.kts
fedimint-client-uniffi/langs/android/lib/: build.gradle.kts  proguard-rules.pro
fedimint-client-uniffi/langs/swift/: Package.swift
