[package]
name = "fedimint-client-uniffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["The Fedimint Developers"]
description = "fedimint client for uniffi"
readme = "README.md"
repository = "https://github.com/fedimint/fedimint"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "fedimint_client_uniffi"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow = "1.0.98"
fedimint-client-rpc = { version = "0.10.0" }
fedimint-connectors = { version = "0.10.0" }
fedimint-core = { version = "0.10.0" }
fedimint-db-locked = { version = "0.10.0" }
fedimint-rocksdb = { version = "0.10.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
socket2 = { version = "0.5.7", features = ["all"] }
thiserror = "2.0.12"
tokio = "1.48.0"
uniffi = { version = "0.29", features = ["bindgen-tests", "cli", "tokio"] }

[build-dependencies]
fedimint-build = { version= "0.10.0" }
glob = "0.3.1"
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary